fix anchor alignment

--- a/assets/style/_typographie.sass
+++ b/assets/style/_typographie.sass
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5, h6
     a
       position: absolute
       margin: 0 0 0 -3rem
-      padding: .5rem 1rem .5rem 1.5rem
+      padding: .9rem 1rem .5rem 1.5rem
       font-weight: normal
       border: none
       &:hover
